--- a/src/main/resources/static/signup.html
+++ b/src/main/resources/static/signup.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Sign Up | Internship Tracker</title>
 
-    <!-- Same font everywhere -->
+    <!-- SAME FONT -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
 
     <!-- SAME CSS -->
@@ -16,24 +16,21 @@
 
     <h2>Create Account</h2>
 
-    <form onsubmit="register(); return false;">
+    <label>Username</label>
+    <input id="username" placeholder="Enter username" required>
 
-        <label>Username</label>
-        <input id="username" placeholder="Enter username" required>
-          <br>
-		  <br>
-        <label>Password</label>
-        <input id="password" type="password" placeholder="Enter password" required>
+    <br><br>
 
-        <div style="text-align:center; margin-top:20px;">
-            <button type="submit">Sign Up</button>
-        </div>
+    <label>Password</label>
+    <input id="password" type="password" placeholder="Enter password" required>
 
-    </form>
+    <div style="text-align:center; margin-top:20px;">
+        <button type="button" onclick="signup()">Sign Up</button>
+    </div>
 
     <p style="text-align:center; margin-top:20px;">
         Already have an account?
-        <a href="index.html"  style="color: white;">Login</a>
+        <a href="index.html" style="color: white;">Login</a>
     </p>
 
     <p id="error" style="text-align:center; color:red; margin-top:10px;"></p>
@@ -41,5 +38,6 @@
 </div>
 
 <script src="signup.js"></script>
+
 </body>
 </html>
